replace boost::shared_ptr with std::shared_ptr

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,4 @@ protobuf_generate_cpp(PROTO_SRC PROTO_HEADER
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 add_executable(media_server ${SOURCES} ${PROTO_SRC})
-target_link_libraries(media_server ${BRPC_LIB} ${DYNAMIC_LIB} ${GPERFTOOLS_LIBRARIES})
+target_link_libraries(media_server ${BRPC_LIB} ${DYNAMIC_LIB})
